# THzCommon

./: CMakeLists.txt  CMakePresets.json  README.md  THzCommon.geany  meson.build
.github/workflows/: build-and-test.yml
Converter/: Base64.h  CMakeLists.txt  HuffmanCoder.h  HuffmanCommons.h
Diagnostics/: CMakeLists.txt  StopWatch.cpp  StopWatch.h
Logging/: CMakeLists.txt  Logging.cpp  Logging.h  Logging.hpp
Math/: CMakeLists.txt  InRange.h  MinMax.h  Point.h  Rectangle.cpp
Tests/: CMakeLists.txt  Logging.cpp
Tests/Converter/: HuffmanCoder.cpp  HuffmanCommons.cpp
Tests/Math/: InRange.cpp
Tests/Utility/: BitBuffer.cpp  FStreamHelpers.cpp
Utility/: BitBuffer.h  ByteOrder.h  CMakeLists.txt  Concepts.hpp  FStreamHelpers.h  SpanHelpers.h
cmake/: helper_functions.cmake
include/THzCommon/configuration/: configuration.hpp  configurationbuilder.hpp  configurationstorage.hpp
include/THzCommon/converter/: base64.hpp  huffmancoder.h  huffmancoder.hpp  huffmancommons.h  huffmancommons.hpp
include/THzCommon/diagnostics/: hexview.hpp  stopwatch.h  stopwatch.hpp
include/THzCommon/logging/: logging.h  logging.hpp
include/THzCommon/math/: bilinearInterpolation.hpp  constants.hpp  inrange.hpp  matrix.hpp  point.hpp  rectangle.h  rectangle.hpp
include/THzCommon/memory/: addresshelper.hpp  imemorypool.h  imemorypool.hpp  imemorywrapper.h
include/THzCommon/network/: address.hpp  common.hpp  native.hpp  selector.hpp  socket.hpp  socketbase.hpp  socketposix.hpp  socketwin32.hpp  tcpconnection.hpp  tcpsocket.hpp  tcpsocketposix.hpp  tcpsocketwin32.hpp  udpsocket.hpp
include/THzCommon/random/: ant.hpp
include/THzCommon/structures/: octree.h  octree.hpp  queue.h  queue.hpp  stack.h  stack.hpp
include/THzCommon/utility/: bitbuffer.hpp  byteorder.hpp  concepts.h  concepts.hpp  flipBuffer.h  flipBuffer.hpp  fstreamhelpers.h  fstreamhelpers.hpp  lineSequencer.hpp  range2D.hpp  range2DFolding.hpp  result.hpp  spanhelpers.h  spanhelpers.hpp  staticPImpl.h  staticPImpl.hpp  stringhelpers.hpp  stringviewhelpers.hpp  time.hpp  workerThread.hpp
scripts/: extract_todos.py  update_readme.py
src/configuration/: configuration.cpp  configurationbuilder.cpp  configurationstorage.cpp
src/converter/: base64.cpp  huffmancoder.cpp  huffmancommons.cpp
src/diagnostics/: hexview.cpp  stopwatch.cpp
src/logging/: logging.cpp
src/math/: point.cpp  rectangle.cpp
src/network/: address.cpp  common_posix.cpp  common_win32.cpp  native_posix.cpp  native_win32.cpp  privatecommon.hpp  selector.cpp  socketbase.cpp  socketwin32.cpp  tcpconnection.cpp  tcpsocket.cpp  tcpsocketwin32.cpp  udpsocket.cpp
src/random/: ant.cpp
src/utility/: bitbuffer.cpp  byteorder.cpp  range2D.cpp  range2DFolding.cpp  stringviewhelpers.cpp  time.cpp  tokenizer.cpp
test/: CMakeLists.txt  logging.cpp
test/configuration/: configuration.cpp  configurationbuilder.cpp  configurationstorage.cpp
test/converter/: base64.cpp  huffmancoder.cpp  huffmancommons.cpp
test/math/: bilinearInterpolation.cpp  inrange.cpp  matrix.cpp  minmax.cpp  point.cpp  rectangle.cpp
test/memory/: addresshelper.cpp
test/network/: address.cpp  socketwin32.cpp  tcpconnection.cpp  tcpsocket.cpp  tcpsocketwin32.cpp  udpsocket.cpp
test/random/: ant.cpp
test/structures/: octree.cpp  queue.cpp  stack.cpp
test/utility/: bitbuffer.cpp  byteorder.cpp  flipBuffer.cpp  fstreamhelpers.cpp  lineSequencer.cpp  range2D.cpp  range2DFolding.cpp  result.cpp  spanhelpers.cpp  sptesthelper.cpp  sptesthelper.h  sptesthelper.hpp  staticPImpl.cpp  stringhelpers.cpp  stringviewhelpers.cpp  tokenizer.cpp
